# LTM_Group04

./: .gitignore  README.md
client/qt6/: CMakeLists.txt  FileDialogHelper.cpp  FileDialogHelper.h  NetworkClient.cpp  NetworkClient.h  build_client_cmd.bat  check_qt6_quick.ps1  clear_cmake_cache.bat  clear_cmake_cache.ps1  create_package.ps1  create_portable.ps1  create_single_exe.ps1  deploy_qt.ps1  find_qt_path.bat  install_client.ps1  main.cpp  qml.qrc  test_1vn_2clients.ps1
client/qt6/.qtcreator/: CMakeLists.txt.user.4ff1199  CMakeLists.txt.user.cf1acde
client/qt6/qml/: ChatScreen.qml  FriendsList.qml  GameModeSelection.qml  HomeScreen.qml  InviteNotificationDialog.qml  LeaderboardScreen.qml  LoseScreen.qml  OneVNHistoryScreen.qml  OneVNMode.qml  OneVNReplayScreen.qml  OneVNRoomListScreen.qml  ProfileScreen.qml  QuickModeGame.qml  Signin.qml  Signup.qml  SplashScreen.qml  WinScreen.qml  main.qml
client/qt6/qml/components/: CustomCheckBox.qml  CustomTextField.qml  GameOptionButton.qml  PasswordStrengthIndicator.qml  SocialIconButton.qml  ToastMessage.qml
database/: script.txt
documents/: COMMANDS_GUIDE.md  COMMAND_CONSTANTS_UPDATE.md  PACKET_STRUCT_DETAILED.md  QUICKMODE_FLOW.md  USECASE_FLOWS.md
server/: Makefile  add_friends_for_duc.sql  check_server_setup.ps1  db.sql  fix_alice_password.sql  fix_question_columns.sql  fix_users_table_stats.sql  forward_wsl_port.ps1  generate_sample_users.ps1  insert_questions.sql  migration_add_eliminated.sql  migration_add_room_config.sql  migration_old_to_new.sql  sample_users.sql  setup_env.ps1  test_invite_flow  (+5 more)
(+104 files in other folders)
